--- a/PoJunConsole/PoJunConsole.vcxproj
+++ b/PoJunConsole/PoJunConsole.vcxproj
@@ -52,13 +52,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\PoJunCore\;..\..\TianShu\TianShu\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\capstone\include;..\PoJunCore\;..\..\虚无\XuWu\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\Debug\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>TianShu.lib;PoJunCore.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>XuWu.lib;PoJunCore.lib;capstone_dll.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
