--- a/PoJunCore/PoJunCore.vcxproj.filters
+++ b/PoJunCore/PoJunCore.vcxproj.filters
@@ -30,12 +30,6 @@
     <ClInclude Include="XDebugControl.h">
       <Filter>File</Filter>
     </ClInclude>
-    <ClInclude Include="XDebugDataCenter.h">
-      <Filter>File</Filter>
-    </ClInclude>
-    <ClInclude Include="XPublicHead.h">
-      <Filter>File</Filter>
-    </ClInclude>
     <ClInclude Include="XModelTab.h">
       <Filter>File</Filter>
     </ClInclude>
@@ -48,8 +42,14 @@
     <ClInclude Include="XOutStringTab.h">
       <Filter>File</Filter>
     </ClInclude>
+    <ClInclude Include="XDecodingASM.h">
+      <Filter>File</Filter>
+    </ClInclude>
     <ClInclude Include="XBreakPoint.h">
-      <Filter>头文件</Filter>
+      <Filter>File</Filter>
+    </ClInclude>
+    <ClInclude Include="XPCoreHead.h">
+      <Filter>File</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -65,12 +65,6 @@
     <ClCompile Include="XDebugControl.cpp">
       <Filter>File</Filter>
     </ClCompile>
-    <ClCompile Include="XDebugDataCenter.cpp">
-      <Filter>File</Filter>
-    </ClCompile>
-    <ClCompile Include="XPublicHead.cpp">
-      <Filter>File</Filter>
-    </ClCompile>
     <ClCompile Include="XModelTab.cpp">
       <Filter>File</Filter>
     </ClCompile>
@@ -83,8 +77,14 @@
     <ClCompile Include="XOutStringTab.cpp">
       <Filter>File</Filter>
     </ClCompile>
+    <ClCompile Include="XDecodingASM.cpp">
+      <Filter>File</Filter>
+    </ClCompile>
     <ClCompile Include="XBreakPoint.cpp">
-      <Filter>源文件</Filter>
+      <Filter>File</Filter>
+    </ClCompile>
+    <ClCompile Include="XPCoreHead.cpp">
+      <Filter>File</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
