--- a/PoJunCore/PoJunCore.vcxproj.filters
+++ b/PoJunCore/PoJunCore.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="XPCoreHead.h">
       <Filter>File</Filter>
     </ClInclude>
+    <ClInclude Include="XCommandMgr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -85,6 +88,9 @@
     </ClCompile>
     <ClCompile Include="XPCoreHead.cpp">
       <Filter>File</Filter>
+    </ClCompile>
+    <ClCompile Include="XCommandMgr.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
