--- a/PoJunCore/PoJunCore.vcxproj
+++ b/PoJunCore/PoJunCore.vcxproj
@@ -94,7 +94,7 @@
     <ClInclude Include="XMemoryMgr.h" />
     <ClInclude Include="XModelTab.h" />
     <ClInclude Include="XOutStringTab.h" />
-    <ClInclude Include="XPCoreHead.h" />
+    <ClInclude Include="XPJCoreHead.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="XThreadTab.h" />
@@ -118,7 +118,7 @@
     <ClCompile Include="XMemoryMgr.cpp" />
     <ClCompile Include="XModelTab.cpp" />
     <ClCompile Include="XOutStringTab.cpp" />
-    <ClCompile Include="XPCoreHead.cpp" />
+    <ClCompile Include="XPJCoreHead.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
