--- a/PoJunCore/PoJunCore.vcxproj.filters
+++ b/PoJunCore/PoJunCore.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="XPCoreHead.h">
-      <Filter>File</Filter>
-    </ClInclude>
     <ClInclude Include="XBreakPoint.h">
       <Filter>File\break_point</Filter>
     </ClInclude>
@@ -72,6 +69,9 @@
     <ClInclude Include="XDebugControl.h">
       <Filter>File\Control</Filter>
     </ClInclude>
+    <ClInclude Include="XPJCoreHead.h">
+      <Filter>File</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -82,9 +82,6 @@
     </ClCompile>
     <ClCompile Include="PoJunCore.cpp">
       <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="XPCoreHead.cpp">
-      <Filter>File</Filter>
     </ClCompile>
     <ClCompile Include="XBreakPoint.cpp">
       <Filter>File\break_point</Filter>
@@ -115,6 +112,9 @@
     </ClCompile>
     <ClCompile Include="XDebugControl.cpp">
       <Filter>File\Control</Filter>
+    </ClCompile>
+    <ClCompile Include="XPJCoreHead.cpp">
+      <Filter>File</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
