--- a/PoJunCore/PoJunCore.vcxproj.filters
+++ b/PoJunCore/PoJunCore.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="XSQLite3.h">
       <Filter>File\Control</Filter>
     </ClInclude>
+    <ClInclude Include="XDebugProcessInfo.h">
+      <Filter>File\Control</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -114,6 +117,9 @@
       <Filter>File</Filter>
     </ClCompile>
     <ClCompile Include="XSQLite3.cpp">
+      <Filter>File\Control</Filter>
+    </ClCompile>
+    <ClCompile Include="XDebugProcessInfo.cpp">
       <Filter>File\Control</Filter>
     </ClCompile>
   </ItemGroup>
