--- a/PoJunCore/PoJunCore.vcxproj
+++ b/PoJunCore/PoJunCore.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="XSQLite3.h" />
+    <ClInclude Include="XStackData.h" />
     <ClInclude Include="XThreadTab.h" />
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +126,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="XSQLite3.cpp" />
+    <ClCompile Include="XStackData.cpp" />
     <ClCompile Include="XThreadTab.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
