--- a/PoJunCore/PoJunCore.vcxproj
+++ b/PoJunCore/PoJunCore.vcxproj
@@ -58,7 +58,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\Debug\</AdditionalLibraryDirectories>
-      <AdditionalDependencies>capstone_dll.lib;XuWu.lib;sqlite3.lib;dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>capstone_dll.lib;XuWu.lib;sqlite3.lib;dbghelp.lib;ImageHlp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -98,7 +98,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="XSQLite3.h" />
-    <ClInclude Include="XStackData.h" />
+    <ClInclude Include="XSymbolData.h" />
     <ClInclude Include="XThreadTab.h" />
   </ItemGroup>
   <ItemGroup>
@@ -126,7 +126,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="XSQLite3.cpp" />
-    <ClCompile Include="XStackData.cpp" />
+    <ClCompile Include="XSymbolData.cpp" />
     <ClCompile Include="XThreadTab.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
