--- a/PoJunCore/PoJunCore.vcxproj.filters
+++ b/PoJunCore/PoJunCore.vcxproj.filters
@@ -75,8 +75,8 @@
     <ClInclude Include="XDebugProcessInfo.h">
       <Filter>File\Control</Filter>
     </ClInclude>
-    <ClInclude Include="XStackData.h">
-      <Filter>头文件</Filter>
+    <ClInclude Include="XSymbolData.h">
+      <Filter>File\Module</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -125,8 +125,8 @@
     <ClCompile Include="XDebugProcessInfo.cpp">
       <Filter>File\Control</Filter>
     </ClCompile>
-    <ClCompile Include="XStackData.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="XSymbolData.cpp">
+      <Filter>File\Module</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
