--- a/PoJunUI/PoJunUI.vcxproj.filters
+++ b/PoJunUI/PoJunUI.vcxproj.filters
@@ -38,17 +38,20 @@
       <Extensions>cpp;moc</Extensions>
       <SourceControlFiles>False</SourceControlFiles>
     </Filter>
-    <Filter Include="UI">
+    <Filter Include="File">
+      <UniqueIdentifier>{c6136de3-59bd-47dc-b277-0b6f21cab46a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="File\UI">
       <UniqueIdentifier>{68d48d5e-c37e-4ad3-bc9e-4f0260005164}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\ui">
-      <UniqueIdentifier>{880e9d9f-0799-480e-8482-29475909cd13}</UniqueIdentifier>
+    <Filter Include="File\ModuleController">
+      <UniqueIdentifier>{1e865947-d614-46ad-be5a-1b79f58f790a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="File\ModuleController\C">
+      <UniqueIdentifier>{de6e8fb8-a172-4be0-b1d9-c1837677fbd2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GeneratedFiles\Debug\moc_PoJunUI.cpp">
       <Filter>Generated Files\Debug</Filter>
     </ClCompile>
@@ -59,10 +62,10 @@
       <Filter>Generated Files</Filter>
     </ClCompile>
     <ClCompile Include="PoJunUI.cpp">
-      <Filter>UI</Filter>
+      <Filter>File\UI</Filter>
     </ClCompile>
     <ClCompile Include="XOutPutWindow.cpp">
-      <Filter>UI</Filter>
+      <Filter>File\UI</Filter>
     </ClCompile>
     <ClCompile Include="GeneratedFiles\Debug\moc_XOutPutWindow.cpp">
       <Filter>Generated Files\Debug</Filter>
@@ -77,7 +80,31 @@
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
     <ClCompile Include="XCommandWindow.cpp">
-      <Filter>UI</Filter>
+      <Filter>File\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="XDateCenter.cpp">
+      <Filter>File\ModuleController</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_XControllerCenter.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_XControllerCenter.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="XControllerCenter.cpp">
+      <Filter>File\ModuleController\C</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_XDbgThread.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_XDbgThread.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="XDbgThread.cpp">
+      <Filter>File\ModuleController\C</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>File</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -91,16 +118,22 @@
       <Filter>Form Files</Filter>
     </CustomBuild>
     <CustomBuild Include="PoJunUI.h">
-      <Filter>UI</Filter>
+      <Filter>File\UI</Filter>
     </CustomBuild>
     <CustomBuild Include="XOutPutWindow.h">
-      <Filter>UI</Filter>
+      <Filter>File\UI</Filter>
     </CustomBuild>
     <CustomBuild Include="XCommandWindow.h">
-      <Filter>UI</Filter>
+      <Filter>File\UI</Filter>
     </CustomBuild>
     <CustomBuild Include="CommandWindow.ui">
       <Filter>Form Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="XControllerCenter.h">
+      <Filter>File\ModuleController\C</Filter>
+    </CustomBuild>
+    <CustomBuild Include="XDbgThread.h">
+      <Filter>File\ModuleController\C</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +145,12 @@
     </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_CommandWindow.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="XDateCenter.h">
+      <Filter>File\ModuleController</Filter>
+    </ClInclude>
+    <ClInclude Include="XPublic.h">
+      <Filter>File</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
